# hedgehog-Tutorials

./: CMakeLists.txt  clean.sh
tutorial0/: compile.sh  tutorial0.cc
tutorial6/: README.md  comm.h  compile.sh  io.h  tutorial6.cc  verify.sh
tutorial7/: README.md  comm.h  compile.sh  tutorial7.cc
tutorial7/comm/: comm.h
tutorial7/data/: matrix_block_data.h
tutorial7/state/: cannon_state.h  cannon_state_manager.h  input_block_state.h  output_state.h  partial_computation_state.h
tutorial7/task/: addition_task.h  comm_tasks.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h
tutorial8/: CMakeLists.txt  README.md  run.sh  test.sh  tutorial8.cc  vectorAdd.cu
tutorial8/comm/: comm.h  comm_tasks.h
tutorial8/cuda_tasks/: cuda_addition_task.h  cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_product_task.h  cuda_streams.h
tutorial8/data/: cuda_matrix_block_data.h  data_type.h  matrix_block_data.h  matrix_data.h
tutorial8/state/: cannon_state.h  cannon_state_manager.h  cuda_input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial8/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h
tutorial8/utils/: cuda_utils.h
